[tool.poetry]
name = "wattour"
version = "0.1.0"
description = "Internal Watt-Our package for different methods"
authors = ["Alex Tseng <134972440+alexrtseng@users.noreply.github.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
setuptools = "^75.3.0"
gurobipy = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
